Bug 426749 - Discover miscalculates the total number of packages that have updates
Summary: Discover miscalculates the total number of packages that have updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-19 20:34 UTC by Vlad Zahorodnii
Modified: 2020-10-01 17:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
Discover indicates that there are 3 packages that can be updated, but in reality 5 packages have updates (212.68 KB, image/png)
2020-09-19 20:34 UTC, Vlad Zahorodnii
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad Zahorodnii 2020-09-19 20:34:41 UTC
Created attachment 131788 [details]
Discover indicates that there are 3 packages that can be updated, but in reality 5 packages have updates

STEPS TO REPRODUCE
1. Install a bunch of addons from the KDE store
2. Wait for updates
3. Start Discover

OBSERVED RESULT
See the attached screenshot.

EXPECTED RESULT
The number in the bottom left window corner that indicates how many packages have updates matches the reality.

SOFTWARE/OS VERSIONS
Discover: a33a2e09019be5177d48507ba08c1d344c047865
Comment 1 Aleix Pol 2020-10-01 09:28:21 UTC
Git commit 10b9f25987db594374fc62465a5525f9972a3001 by Aleix Pol.
Committed on 01/10/2020 at 09:26.
Pushed by apol into branch 'master'.

kns: Notify when updates count changes

M  +2    -0    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://invent.kde.org/plasma/discover/commit/10b9f25987db594374fc62465a5525f9972a3001
Comment 2 Aleix Pol 2020-10-01 09:28:41 UTC
Git commit 3bec5abb0a9a0747f395e1e8999f33c1097c132d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 01/10/2020 at 09:28.
Pushed by apol into branch 'Plasma/5.20'.

kns: Notify when updates count changes


(cherry picked from commit 10b9f25987db594374fc62465a5525f9972a3001)

M  +2    -0    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://invent.kde.org/plasma/discover/commit/3bec5abb0a9a0747f395e1e8999f33c1097c132d