kns: Notify when updates count changes

BUG: 426749


(cherry picked from commit 10b9f25987db594374fc62465a5525f9972a3001)